--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container{
+  text-align: center;
+}
+
+.heading{
+  font-size: 20px;
+  padding-bottom: 20px
+}
