--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
+/* App.css */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f0f8ff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
+.container {
+ 
+  width: 350px;
+  padding: 20px;
+  background-color:gray;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.weather-data {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 10px;
+ 
+}
+
+.heading {
+  font-size: 24px;
+  font-weight: bold;
+  color: white;
+  margin-bottom: 10px;
+}
+
+h1, h3 {
+  color: white;
+  font-size: 18px;
+  margin: 5px 0;
+}
+
+input[name="search"] {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #d1d8e0;
+  font-size: 16px;
+  outline: none;
+  margin-top: 15px;
+}
+
+input[name="search"]:focus {
+  border-color: #3498db;
+}
+
+input[name="search"]::placeholder {
+  color: #7f8c8d;
+}
+
+h1 {
+  font-size: 22px;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.temp-section{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.temp-section > img{
+  height: 50px;
+  width: 50px;
 }
